--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" href="style.css">
     
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="http://fb.me/react-with-addons-0.10.0.js"></script>
     <script src="lib/marked.js"></script>
