adding fullstops to ends of line for spritns for better pacing between lines

--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,18 @@
 
     <title>notes</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="http://fb.me/react-with-addons-0.10.0.js"></script>
-    <script src="lib/marked.js"></script>
+    <script type="text/javascript" src="/react.js"></script>
+    <script src="/lib/marked.js"></script>
 
     <script type="text/javascript">
         var SpritzSettings = {
         clientId: "e31e14555946bf0a6",
-        redirectUri: "localhost:9000/login_success.html",
+        redirectUri: "http://swagnotes.net/login_success.html",
         };
     </script>
 
@@ -28,6 +28,6 @@
         <div data-role="spritzer"></div>
     </div>
     <div id="app"></div>
-    <script src="compiled.js"></script>
+    <script src="/compiled.js"></script>
 </body>
 </html>
